# Schroedingers-Agent

./: .gitignore  README.md  frontend.py  main.py  pyproject.toml  start.sh  start_all_mcp.sh  tools.sh
Agent/: .config.json
Agent/API/: api.py  deps.py
Agent/Domain/: agent_lifecycle.py  agent_prompt_config.py  agent_service.py  agent_state_enum.py  events.py  goal_state_enum.py  llm_planner.py  plan.py  planning_mode_enum.py
Tools/: 00_mcp_stock_ticker_resolver.py  01_mcp_valuation_analysis.py  02_mcp_financial_health.py  03_mcp_reg_comply_insider_signals.py  04_corporate_strategy.py  05_news_sentiment.py  06_mcp_local_latex_builder.py  07_mcp_report_generator.py  08_sec_intelligence.py  mcp_alpha_vantage.py  mcp_financial_modeling_prep.py  mcp_newsapi_everything.py  mcp_openai.py  mcp_test.py  mcp_valuation_analysis.py  mcp_valuation_analysis_mock.py  mcp_yfinance.py  messages.jsonl  mock_test.py  notes.txt  notion.py  prompts.txt  server.py  shipping_status.json  sudoku.py  test_server.py  websearch.py
Tools/Evaluation/: call_agent.py
Tools/eval/: analyze_comprehensive.py  analyze_tool_coverage.py  analyze_workflow_execution.py  prompts.py  run_evaluation.py  workflow_stable.yaml
Tools/gmail/: gmail_mcp.py
Tools/mock_data/: company_profile_SNOW.json  comps_valuation_range_SNOW.json  enterprise_values_SNOW.json  income_statement_SNOW.json  peers_SNOW.json  stock_screener_technology.json
Tools/old_tools/: 00_mcp_stock_ticker_resolver.py  04_corporate_strategy.py  mcp_alpha_vantage.py  mcp_alpha_vantage_client.py  mcp_ma_analystics.py  mcp_sec_edgar.py  (+2 more)
(+51 files in other folders)
